--- a/May_Sabra_Project2/CSS/style.css
+++ b/May_Sabra_Project2/CSS/style.css
@@ -6,12 +6,14 @@ July 18, 2013
 */
 
 body {
-	background: #8EE2FF;
+	background-color: #8EE2FF;
 }
 
 h1 {
 	
 	color: #3F95B2;
+	margin: 0px;
+	padding: 0px;
 	font-family: arial;
 	font-size: 20pt;
 	text-align: center;
@@ -47,7 +49,8 @@ input.submit:active{
 }
 
 fieldset {
-	border: 2px dashed #FFED86;
+	border-color: 2px dashed #FFED86;
+	
 }
 
 legend {
