images added in main.js

--- a/May_Sabra_Project4/CSS/style.css
+++ b/May_Sabra_Project4/CSS/style.css
@@ -1,10 +1,10 @@
 /*	Sabra May
 	VFW 1307
-	Project 3 */
+	Project 4 */
 	
 body {
 	font: 14px Helvetica, Arial, sans-serif;
-	color #555;
+	color #84d8da;
 }	
 
 ul{
